# PME

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  PME.h  README.md  minimal.cpp
demo/: alien.h  fpscounter.h  jstest.h  main.cpp  mario.h
res/: mm.html  simple.html
src/: audio.h  component.h  debug.h  entity.h  gltest.h  input.h  internal.h  invoke.h  math.h  physics.h  random.h  resources.h  scene.h  time.h
src/Components/: Animator.h  AudioSource.h  Camera.h  Collider.h  Rigidbody.h  SpriteRenderer.h  Text.h  Transform.h
src/Structs/: rect.h  vector2.h
src/legacy/: ecs.h  invoke.h
